--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>First Application</title>
+    <title>Pricing Card</title>
     <link rel="stylesheet" href="./styles.css" />
   	<link rel="preconnect" href="https://fonts.gstatic.com">
   	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400,700&display=swap" rel="stylesheet">
